fix: vitalCard skeleton on mobile

--- a/src/components/reusable/accordion/accordionItem.scss
+++ b/src/components/reusable/accordion/accordionItem.scss
@@ -119,8 +119,11 @@
 
 .kyn-accordion-item-subtitle {
   @include typography.type-ui-02;
-  font-weight: var(--kd-font-weight-regular);
-  color: var(--kd-color-text-level-secondary);
+
+  & {
+    font-weight: var(--kd-font-weight-regular);
+    color: var(--kd-color-text-level-secondary);
+  }
 
   .disabled & {
     color: var(--kd-color-text-link-level-disabled);
