--- a/src/components/reusable/blockCodeView/blockCodeView.scss
+++ b/src/components/reusable/blockCodeView/blockCodeView.scss
@@ -71,8 +71,11 @@ pre.line-numbers {
 
     label {
       @include typography.type-ui-01;
-      color: var(--kd-color-text-level-secondary);
-      font-weight: var(--kd-font-weight-medium);
+
+      & {
+        color: var(--kd-color-text-level-secondary);
+        font-weight: var(--kd-font-weight-medium);
+      }
     }
   }
 
