--- a/src/components/reusable/card/vitalCard.scss
+++ b/src/components/reusable/card/vitalCard.scss
@@ -47,6 +47,8 @@
 
     @media (min-width: 42rem) {
       display: block;
+      align-items: center;
+      flex-direction: row;
     }
   }
 
@@ -65,10 +67,10 @@
   }
 
   &-cat-subcat-text {
-    padding: 0px 8px;
+    padding: 0;
 
     @media (min-width: 42rem) {
-      padding: 0;
+      padding: 0 0 16px;
     }
   }
 
