--- a/src/components/reusable/modal/modal.scss
+++ b/src/components/reusable/modal/modal.scss
@@ -119,14 +119,20 @@ header {
 
 .label {
   @include typography.type-ui-02;
-  color: var(--kd-color-text-level-secondary);
+
+  & {
+    color: var(--kd-color-text-level-secondary);
+  }
 }
 
 h1 {
   @include typography.type-body-01;
-  color: var(--kd-color-text-title-primary);
-  margin: 0;
-  order: 1;
+
+  & {
+    color: var(--kd-color-text-title-primary);
+    margin: 0;
+    order: 1;
+  }
 }
 
 .footer {
