--- a/src/components/reusable/notification/notification.scss
+++ b/src/components/reusable/notification/notification.scss
@@ -104,15 +104,21 @@ kyn-link::part(link) {
 
   &-title {
     @include typography.type-ui-02;
-    font-weight: var(--kd-font-weight-medium);
-    color: var(--kd-color-text-level-primary);
-    margin: 0;
+
+    & {
+      font-weight: var(--kd-font-weight-medium);
+      color: var(--kd-color-text-level-primary);
+      margin: 0;
+    }
   }
 
   &-subtitle {
     @include typography.type-ui-02;
-    margin-top: 2px;
-    color: var(--kd-color-text-level-primary);
+
+    & {
+      margin-top: 2px;
+      color: var(--kd-color-text-level-primary);
+    }
   }
 
   &-content-wrapper {
@@ -190,10 +196,13 @@ kyn-link::part(link) {
 
 .notification-description {
   @include typography.type-ui-03;
-  margin-top: 8px;
-  color: var(--kd-color-text-level-primary);
-  font-weight: var(--kd-font-weight-regular);
-  line-height: 16px;
+
+  & {
+    margin-top: 8px;
+    color: var(--kd-color-text-level-primary);
+    font-weight: var(--kd-font-weight-regular);
+    line-height: 16px;
+  }
 }
 
 .notification-inline .notification-description,
@@ -239,8 +248,11 @@ kyn-link::part(link) {
 
   &-text {
     @include typography.type-ui-02;
-    color: var(--kd-color-text-level-primary);
-    font-weight: var(--kd-font-weight-medium);
+
+    & {
+      color: var(--kd-color-text-level-primary);
+      font-weight: var(--kd-font-weight-medium);
+    }
   }
 }
 
