--- a/src/components/reusable/sideDrawer/sideDrawer.scss
+++ b/src/components/reusable/sideDrawer/sideDrawer.scss
@@ -125,14 +125,20 @@ form {
 
 .label {
   @include typography.type-ui-02;
-  color: var(--kd-color-text-level-secondary);
+
+  & {
+    color: var(--kd-color-text-level-secondary);
+  }
 }
 
 .header-title {
   @include typography.type-body-01;
-  color: var(--kd-color-text-title-primary);
-  margin: 0;
-  order: 1;
+
+  & {
+    color: var(--kd-color-text-title-primary);
+    margin: 0;
+    order: 1;
+  }
 
   &.ai-connected {
     color: var(--kd-color-text-title-ai-primary);
