--- a/src/components/reusable/stepper/stepperItem.scss
+++ b/src/components/reusable/stepper/stepperItem.scss
@@ -110,11 +110,14 @@ p {
   }
 
   &-text {
-    margin-top: 8px;
-    color: var(--kd-color-text-level-primary);
     @include typography.type-body-02;
-    font-weight: var(--kd-font-weight-medium);
-    text-transform: uppercase;
+
+    & {
+      margin-top: 8px;
+      color: var(--kd-color-text-level-primary);
+      font-weight: var(--kd-font-weight-medium);
+      text-transform: uppercase;
+    }
 
     &-disabled {
       cursor: not-allowed;
@@ -254,10 +257,13 @@ p {
 
   &-step-text {
     @include typography.type-ui-03;
-    color: var(--kd-color-text-level-primary);
-    font-weight: var(--kd-font-weight-medium);
-    margin-top: -2px;
-    text-transform: uppercase;
+
+    & {
+      color: var(--kd-color-text-level-primary);
+      font-weight: var(--kd-font-weight-medium);
+      margin-top: -2px;
+      text-transform: uppercase;
+    }
 
     &-large {
       margin-top: 2px;
