--- a/src/stories/sampleCardComponents/vitalCard.scss
+++ b/src/stories/sampleCardComponents/vitalCard.scss
@@ -66,7 +66,7 @@
   }
 
   &-cat-subcat-text {
-    padding: 0px 8px;
+    padding: 0 8px;
 
     @media (min-width: 42rem) {
       padding: 0;
